[workspace]

members = [
    "day01",
    "day02",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Adam Lesperance <lespea@gmail.com>"]
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
incremental = false
lto = true
strip = true

[workspace.dependencies]
