[workspace]

members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Adam Lesperance <lespea@gmail.com>"]
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
incremental = false
lto = true
strip = true

[profile.dev.package.backtrace]
opt-level = 3

[workspace.dependencies]
atoi = "2"
color-eyre = "0"
id_tree = "1"
itertools = "0"
ndarray = "0"
num = "0"
nom = "7"
petgraph = "0"
